# wiktionary_stardict

./: .editorconfig  .gitignore  README.md  create_stardict_textual.py  en.jq  kaikki.py  non_en.jq  pyproject.toml
.github/: release_note.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
docs/: README.md  fonts.html
src/wiktionary_stardict/: db.py  edition.py  koreader.py  main.py  page.py  redirect.py  snapshot.py  stardict.py  zim.py
src/wiktionary_stardict/css/de/: style.css
src/wiktionary_stardict/css/en/: style.css
src/wiktionary_stardict/css/es/: style.css
src/wiktionary_stardict/css/fi/: style.css
src/wiktionary_stardict/css/fr/: style.css
src/wiktionary_stardict/xslt/: clean.xsl  github_page.xsl  image.xsl  utils.xsl
tests/: test_db.py  test_de_flexion.py  test_de_forms.py  test_de_pos.py  test_en_alt_forms.py  test_en_etymology.py  test_en_forms.py  test_en_linkage.py  test_en_pos.py  test_en_pronunciation.py  test_es_conj.py  test_es_etymology.py  test_es_pos.py  test_es_pronunciation.py  test_fi_forms.py  test_fi_liite.py  test_fi_pos.py  test_fi_pronunciation.py  test_fr_conj.py  test_fr_etymology.py  test_fr_forms.py  test_fr_linkage.py  test_fr_pos.py  test_ja_etymology.py  test_ja_forms.py  test_ja_pos.py  test_ja_pronunciation.py  test_languages.py  test_redirect.py  test_ru_etymology.py  test_ru_forms.py  test_ru_gloss.py  test_ru_linkage.py  test_ru_pronunciation.py  test_simple_pos.py  test_sv_forms.py  test_sv_pos.py  test_sv_pronunciation.py  test_zh_etymology.py  test_zh_forms.py  (+3 more)
(+69 files in other folders)
